// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Funds input it renders !disabled and invalid state correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  border-color: #999999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 120px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 4px;
  padding-left: 8px;
  padding-right: 8px;
  margin-right: 8px;
  color: #999999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 240px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: center;
}

.c3 {
  min-width: 0;
  box-sizing: border-box;
  display: inline-block;
  width: 100%;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  border-bottom: 1px solid;
  border-color: #EFF3FD;
  border-top-left-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 80px;
  width: 100%;
}

.c2 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  top: 0px;
  left: 0px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-width: 64px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.25rem;
  text-align: center;
  position: relative;
  background: #d1ddfa;
}

.c5 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #d1ddfa;
  font-size: 2rem;
  margin-top: 0;
  margin-bottom: 0;
  height: 100%;
  display: inline-block;
  width: 100%;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  border: 0;
  border-color: #999999;
  -moz-appearance: textfield;
}

.c5:hover {
  background: #bacbf7;
  cursor: text;
}

.c5:focus {
  box-shadow: 0;
  outline: 0;
  background: #bacbf7;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  class="c0"
  display="flex"
  name="amount"
>
  <div
    class="c1"
    color="input.border"
    display="flex"
    width="100%"
  >
    <h4
      class="c2"
      color="core.nearblack"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Amount
    </h4>
  </div>
  <div
    class="c3"
    display="inline-block"
    width="100%"
  >
    <div
      class="c4"
      display="flex"
      height="80px"
      width="100%"
    >
      <input
        class="BaseInput-u1913i-0 c5"
        display="inline-block"
        font-size="5"
        height="100%"
        name="amount"
        placeholder="0"
        step="0.000000000000000001"
        type="number"
        value="1"
        width="100%"
      />
      <div
        class="c6"
        color="core.primary"
        display="flex"
        font-size="3"
        height="100%"
      >
        FIL
      </div>
    </div>
  </div>
</div>
`;

exports[`Funds input it renders correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  border-color: #999999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 120px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 4px;
  padding-left: 8px;
  padding-right: 8px;
  margin-right: 8px;
  color: #999999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 240px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: center;
}

.c3 {
  min-width: 0;
  box-sizing: border-box;
  display: inline-block;
  width: 100%;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  border-bottom: 1px solid;
  border-color: #EFF3FD;
  border-top-left-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 80px;
  width: 100%;
}

.c2 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  top: 0px;
  left: 0px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-width: 64px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.25rem;
  text-align: center;
  position: relative;
  background: #85e0cb;
}

.c5 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #85e0cb;
  font-size: 2rem;
  margin-top: 0;
  margin-bottom: 0;
  height: 100%;
  display: inline-block;
  width: 100%;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  border: 0;
  border-color: #999999;
  -moz-appearance: textfield;
}

.c5:hover {
  background: #85e0cb;
  cursor: text;
}

.c5:focus {
  box-shadow: 0;
  outline: 0;
  background: #85e0cb;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  class="c0"
  display="flex"
  name="amount"
>
  <div
    class="c1"
    color="input.border"
    display="flex"
    width="100%"
  >
    <h4
      class="c2"
      color="core.nearblack"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Amount
    </h4>
  </div>
  <div
    class="c3"
    display="inline-block"
    width="100%"
  >
    <div
      class="c4"
      display="flex"
      height="80px"
      width="100%"
    >
      <input
        class="BaseInput-u1913i-0 c5"
        display="inline-block"
        font-size="5"
        height="100%"
        name="amount"
        placeholder="0"
        step="0.000000000000000001"
        type="number"
        value="1"
        width="100%"
      />
      <div
        class="c6"
        color="core.primary"
        display="flex"
        font-size="3"
        height="100%"
      >
        FIL
      </div>
    </div>
  </div>
</div>
`;

exports[`Funds input it renders disabled and invalid state correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  border-color: #999999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 120px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 4px;
  padding-left: 8px;
  padding-right: 8px;
  margin-right: 8px;
  color: #999999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 240px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: center;
}

.c3 {
  min-width: 0;
  box-sizing: border-box;
  display: inline-block;
  width: 100%;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  border-bottom: 1px solid;
  border-color: #EFF3FD;
  border-top-left-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 80px;
  width: 100%;
}

.c2 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  top: 0px;
  left: 0px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-width: 64px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.25rem;
  text-align: center;
  position: relative;
  background: #bacbf7;
}

.c5 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #bacbf7;
  font-size: 2rem;
  margin-top: 0;
  margin-bottom: 0;
  height: 100%;
  display: inline-block;
  width: 100%;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  border: 0;
  border-color: #999999;
  -moz-appearance: textfield;
}

.c5:hover {
  background: #bacbf7;
  cursor: initial;
}

.c5:focus {
  box-shadow: 0;
  outline: 0;
  background: #bacbf7;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  class="c0"
  display="flex"
  name="amount"
>
  <div
    class="c1"
    color="input.border"
    display="flex"
    width="100%"
  >
    <h4
      class="c2"
      color="core.nearblack"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Amount
    </h4>
  </div>
  <div
    class="c3"
    display="inline-block"
    width="100%"
  >
    <div
      class="c4"
      display="flex"
      height="80px"
      width="100%"
    >
      <input
        class="BaseInput-u1913i-0 c5"
        disabled=""
        display="inline-block"
        font-size="5"
        height="100%"
        name="amount"
        placeholder="0"
        step="0.000000000000000001"
        type="number"
        value="1"
        width="100%"
      />
      <div
        class="c6"
        color="core.primary"
        disabled=""
        display="flex"
        font-size="3"
        height="100%"
      >
        FIL
      </div>
    </div>
  </div>
</div>
`;

exports[`Funds input it renders disabled and valid state correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  border-color: #999999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 120px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 4px;
  padding-left: 8px;
  padding-right: 8px;
  margin-right: 8px;
  color: #999999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 240px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: center;
}

.c3 {
  min-width: 0;
  box-sizing: border-box;
  display: inline-block;
  width: 100%;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  border-bottom: 1px solid;
  border-color: #EFF3FD;
  border-top-left-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 80px;
  width: 100%;
}

.c2 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  top: 0px;
  left: 0px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-width: 64px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.25rem;
  text-align: center;
  position: relative;
  background: #bacbf7;
}

.c5 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #bacbf7;
  font-size: 2rem;
  margin-top: 0;
  margin-bottom: 0;
  height: 100%;
  display: inline-block;
  width: 100%;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  border: 0;
  border-color: #999999;
  -moz-appearance: textfield;
}

.c5:hover {
  background: #bacbf7;
  cursor: initial;
}

.c5:focus {
  box-shadow: 0;
  outline: 0;
  background: #85e0cb;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  class="c0"
  display="flex"
  name="amount"
>
  <div
    class="c1"
    color="input.border"
    display="flex"
    width="100%"
  >
    <h4
      class="c2"
      color="core.nearblack"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Amount
    </h4>
  </div>
  <div
    class="c3"
    display="inline-block"
    width="100%"
  >
    <div
      class="c4"
      display="flex"
      height="80px"
      width="100%"
    >
      <input
        class="BaseInput-u1913i-0 c5"
        disabled=""
        display="inline-block"
        font-size="5"
        height="100%"
        name="amount"
        placeholder="0"
        step="0.000000000000000001"
        type="number"
        value="1"
        width="100%"
      />
      <div
        class="c6"
        color="core.primary"
        disabled=""
        display="flex"
        font-size="3"
        height="100%"
      >
        FIL
      </div>
    </div>
  </div>
</div>
`;

exports[`Funds input it renders disabled state correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  border-color: #999999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 120px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 4px;
  padding-left: 8px;
  padding-right: 8px;
  margin-right: 8px;
  color: #999999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 240px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: center;
}

.c3 {
  min-width: 0;
  box-sizing: border-box;
  display: inline-block;
  width: 100%;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  border-bottom: 1px solid;
  border-color: #EFF3FD;
  border-top-left-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 80px;
  width: 100%;
}

.c2 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  top: 0px;
  left: 0px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-width: 64px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.25rem;
  text-align: center;
  position: relative;
  background: #bacbf7;
}

.c5 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #bacbf7;
  font-size: 2rem;
  margin-top: 0;
  margin-bottom: 0;
  height: 100%;
  display: inline-block;
  width: 100%;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  border: 0;
  border-color: #999999;
  -moz-appearance: textfield;
}

.c5:hover {
  background: #bacbf7;
  cursor: initial;
}

.c5:focus {
  box-shadow: 0;
  outline: 0;
  background: #bacbf7;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  class="c0"
  display="flex"
  name="amount"
>
  <div
    class="c1"
    color="input.border"
    display="flex"
    width="100%"
  >
    <h4
      class="c2"
      color="core.nearblack"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Amount
    </h4>
  </div>
  <div
    class="c3"
    display="inline-block"
    width="100%"
  >
    <div
      class="c4"
      display="flex"
      height="80px"
      width="100%"
    >
      <input
        class="BaseInput-u1913i-0 c5"
        disabled=""
        display="inline-block"
        font-size="5"
        height="100%"
        name="amount"
        placeholder="0"
        step="0.000000000000000001"
        type="number"
        value="1"
        width="100%"
      />
      <div
        class="c6"
        color="core.primary"
        disabled=""
        display="flex"
        font-size="3"
        height="100%"
      >
        FIL
      </div>
    </div>
  </div>
</div>
`;

exports[`Funds input it renders error states properly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  border-color: #999999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 120px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 4px;
  padding-left: 8px;
  padding-right: 8px;
  margin-right: 8px;
  color: #999999;
  background-color: #FC6D6F;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 240px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: center;
}

.c3 {
  min-width: 0;
  box-sizing: border-box;
  display: inline-block;
  width: 100%;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  border-bottom: 1px solid;
  border-color: #EFF3FD;
  border-top-left-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 80px;
  width: 100%;
}

.c2 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  text-align: center;
  padding-left: 8px;
  padding-right: 8px;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  top: 0px;
  left: 0px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-width: 64px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.25rem;
  text-align: center;
  position: relative;
  background: #d1ddfa;
}

.c5 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #d1ddfa;
  font-size: 2rem;
  margin-top: 0;
  margin-bottom: 0;
  height: 100%;
  display: inline-block;
  width: 100%;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  border: 0;
  border-color: #999999;
  -moz-appearance: textfield;
}

.c5:hover {
  background: #bacbf7;
  cursor: text;
}

.c5:focus {
  box-shadow: 0;
  outline: 0;
  background: #bacbf7;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  class="c0"
  display="flex"
  name="amount"
>
  <div
    class="c1"
    color="input.border"
    display="flex"
    width="100%"
  >
    <p
      class="c2"
      color="core.nearblack"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      specific error message
    </p>
  </div>
  <div
    class="c3"
    display="inline-block"
    width="100%"
  >
    <div
      class="c4"
      display="flex"
      height="80px"
      width="100%"
    >
      <input
        class="BaseInput-u1913i-0 c5"
        display="inline-block"
        font-size="5"
        height="100%"
        name="amount"
        placeholder="0"
        step="0.000000000000000001"
        type="number"
        value="1"
        width="100%"
      />
      <div
        class="c6"
        color="core.primary"
        display="flex"
        font-size="3"
        height="100%"
      >
        FIL
      </div>
    </div>
  </div>
</div>
`;

exports[`Funds input it renders invalid state correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  border-color: #999999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 120px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 4px;
  padding-left: 8px;
  padding-right: 8px;
  margin-right: 8px;
  color: #999999;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 240px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  text-align: center;
}

.c3 {
  min-width: 0;
  box-sizing: border-box;
  display: inline-block;
  width: 100%;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  border-bottom: 1px solid;
  border-color: #EFF3FD;
  border-top-left-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 80px;
  width: 100%;
}

.c2 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  top: 0px;
  left: 0px;
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  min-width: 64px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 1.25rem;
  text-align: center;
  position: relative;
  background: #d1ddfa;
}

.c5 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #d1ddfa;
  font-size: 2rem;
  margin-top: 0;
  margin-bottom: 0;
  height: 100%;
  display: inline-block;
  width: 100%;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  border: 0;
  border-color: #999999;
  -moz-appearance: textfield;
}

.c5:hover {
  background: #bacbf7;
  cursor: text;
}

.c5:focus {
  box-shadow: 0;
  outline: 0;
  background: #bacbf7;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

<div
  class="c0"
  display="flex"
  name="amount"
>
  <div
    class="c1"
    color="input.border"
    display="flex"
    width="100%"
  >
    <h4
      class="c2"
      color="core.nearblack"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Amount
    </h4>
  </div>
  <div
    class="c3"
    display="inline-block"
    width="100%"
  >
    <div
      class="c4"
      display="flex"
      height="80px"
      width="100%"
    >
      <input
        class="BaseInput-u1913i-0 c5"
        display="inline-block"
        font-size="5"
        height="100%"
        name="amount"
        placeholder="0"
        step="0.000000000000000001"
        type="number"
        value="1"
        width="100%"
      />
      <div
        class="c6"
        color="core.primary"
        display="flex"
        font-size="3"
        height="100%"
      >
        FIL
      </div>
    </div>
  </div>
</div>
`;
